# vscode_make

./: README.md
cmake+dependency_inversion_principle/: dependency_inversion_principle.cpp  dependency_inversion_principle.hpp  main.cpp
cmake+single_responsibility_principle/: CMakeLists.txt  main.cpp  single_responsibility_principle.cpp  single_responsibility_principle.h
doctest/: fact.cpp  makefile.mak
makefile+hello.cpp/: CMakeCache.txt  CMakeLists.txt  main.cpp  makefile
